@@ -1,3 +1,8 @@
+2009-11-03  Paul Brook  <paul@codesourcery.com>
+
+	* gas/arm/vfp-neon-syntax.d: Update expected results.
+	* gas/arm/vfp-neon-syntax_t2.d: Update expected results.
+
 2009-11-02  Paul Brook  <paul@codesourcery.com>
 
 	* gas/arm/attr-mfpu-vfpv4.d: New test.
